# laser_scan_integrator

./: .gitignore  CMakeLists.txt  debug_laser_mapper.rviz  package.xml
laser_scan_integrator/: CMakeLists.txt  README.md  package.xml  start segemntation service
laser_scan_integrator/launch/: integrated_scan.launch.py  visualize_integrated_scan.launch.py
laser_scan_integrator/rviz/: robotinobase1_rvizconfig.rviz  robotinobase2_rvizconfig.rviz
laser_scan_integrator/src/: main.cpp
laser_scan_integrator_msg/: CMakeLists.txt  package.xml
laser_scan_integrator_msg/msg/: LineSegment.msg  LineSegments.msg
laser_scan_integrator_msg/srv/: ToggleSegmentation.srv
laser_scan_mapper/: CMakeLists.txt  Name Translation Rotation.txt  package.xml  postion.txt
laser_scan_mapper/config/: machines.yaml  mapper_params.yaml  tolerance.yaml
laser_scan_mapper/src/: mapper.cpp  test.cpp  tf_publisher.cpp
laser_scan_mapper/src/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.bash  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
laser_scan_mapper/src/log/: latest_build
launch/: integrate_2_scan.launch.py  integrated_scan.launch.py  visualize_integrated_2_scan.launch.py  visualize_integrated_scan.launch.py
rosbag2_2025_02_15-10_32_05/: metadata.yaml
rviz/: laser_scan_integrator.rviz
src/: main.cpp
